components/policies/staging/base/konflux-rbac/set-tenant-namespace-visibility/.chainsaw-test/resources/authorized-rolebinding.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: RoleBinding
metadata:
  name: authorized-rolebinding
  namespace:  (join('-', [$type, $namespace]))
subjects:
- kind: Group
  name: system:authenticated
  apiGroup: rbac.authorization.k8s.io
- kind: Group
  name: test-group
  apiGroup: rbac.authorization.k8s.io
roleRef:
  kind: Role 
  name: test-role
  apiGroup: rbac.authorization.k8s.io
