components/policies/staging/base/konflux-rbac/set-tenant-namespace-visibility/.chainsaw-test/resources/non-tenant-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: (join('-', [$type, $namespace]))
