components/policies/staging/base/konflux-rbac/set-tenant-namespace-visibility/.chainsaw-test/chainsaw-assert-clusterpolicy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: set-tenant-namespace-visibility
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
