components/policies/staging/base/konflux-rbac/set-tenant-namespace-visibility/.chainsaw-test/resources/expected-private-tenant-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: (join('-', [$type, $namespace]))
  labels:
    konflux-ci.dev/type: tenant
    konflux-ci.dev/visibility: private
